--- a/static/tools/okidoki/index.html
+++ b/static/tools/okidoki/index.html
@@ -2,11 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <!-- スマホでの自動ズームを抑止しつつ、全体も小さめに表示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>沖ドキツール</title>
 
-  <!-- OGP / Twitterカード（最小限） -->
+  <!-- OGP / Twitterカード -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="沖ドキツール">
   <meta property="og:description" content="沖ドキシリーズ専用ツール。RB/BB履歴から差枚と有利Gを簡単集計。">
@@ -22,10 +21,10 @@
   <style>
     :root{
       --gap: 6px;
-      --font: 12px;     /* ベースも一段階小さく */
+      --font: 12px;
       --maxw: 820px;
-      --theme: #F7C948;       /* 初期: ゴールド（濃） */
-      --theme-light: #FFF8DC; /* 初期: ゴールド（薄/ヘッダー背景） */
+      --theme: #F7C948;
+      --theme-light: #FFF8DC;
     }
     *{ box-sizing: border-box; }
     body{ margin:12px; font-size:var(--font); color:#222; font-weight:normal; }
@@ -33,13 +32,12 @@
 
     h1{
       margin:0 0 10px 0;
-      font-size:18px;                 /* タイトルも少しだけ小さく */
+      font-size:18px;
       padding-left:8px;
       border-left:5px solid var(--theme);
       font-weight:normal;
     }
 
-    /* テーマ切替 */
     .theme-bar{ display:flex; gap:8px; flex-wrap:wrap; margin-bottom:8px; }
     .theme-btn{
       border:1px solid #ccc; border-radius:999px;
@@ -51,20 +49,18 @@
     .theme-btn[data-key="gorgeous"]{ background:#ffe5f0; }
     .theme-btn.active{ border-color:var(--theme); }
 
-    /* 操作ボタン */
     .controls{ display:flex; gap:var(--gap); flex-wrap:wrap; }
     button{ padding:4px 8px; border:1px solid #ccc; border-radius:6px; background:#fff; cursor:pointer; font-size:12px; font-weight:normal; }
 
-    /* テーブル */
     table{ width:100%; border-collapse:collapse; margin-top:8px; table-layout:fixed; }
     th, td{
-      border:1px solid #e5e5e5; padding:5px 3px;
+      border:1px solid #e5e5e5; padding:4px 3px;
       text-align:center; vertical-align:middle;
       font-size:12px; font-weight:normal;
     }
     thead th{ background: var(--theme-light); }
 
-    /* 列幅：履歴/種別/ゲーム数/有利G/差枚/操作 = 13/20/15/13/13/13 */
+    /* 列幅修正：13/20/17/13/13/13 */
     th.col-label{ width:12%; }
     th.col-kind { width:18%; }
     th.col-games{ width:18%; }
@@ -72,59 +68,55 @@
     th.col-diff { width:12%; }
     th.col-ops  { width:12%; }
 
-    /* 見出し・値の改行防止（ゲーム数/有利G） */
+    /* 改行防止 */
     thead th:nth-child(3),
     thead th:nth-child(4),
     tbody td:nth-child(3),
     tbody td:nth-child(4){ white-space: nowrap; }
 
-    /* 有利G・差枚は中央寄せテキストで固定 */
-    tbody td:nth-child(4) .value-text,
-    tbody td:nth-child(5) .value-text{ display:inline-block; width:100%; text-align:center; }
+    /* 行の高さ固定 */
+    tbody tr{
+      height:30px;  /* ← 決定時に高さが変わらないように固定 */
+    }
 
-    /* 種別ボタン（RB=青 / BB=赤 固定） */
-    .kind-btns{ display:flex; justify-content:center; gap:6px; }
+    /* 各セル内の要素を高さに合わせて統一 */
+    input[type="number"]{
+      width:3.8em;
+      height:22px;
+      line-height:22px;
+      text-align:center;
+      font-size:12px;
+      font-weight:normal;
+      border:1px solid #ccc;
+      border-radius:4px;
+      padding:0;
+    }
     .kind-btns button{
-      border:1px solid #ccc; border-radius:6px; padding:3px 6px; cursor:pointer; white-space:nowrap;
+      height:22px; line-height:22px; padding:0 6px;
       font-size:12px; font-weight:normal;
     }
+    .value-text{
+      display:inline-block; line-height:22px;
+    }
+
+    .kind-btns{ display:flex; justify-content:center; gap:6px; }
     .kind-btns button.rb-selected{ background:#1976d2; color:#fff; border-color:#1976d2; }
     .kind-btns button.bb-selected{ background:#d32f2f; color:#fff; border-color:#d32f2f; }
 
-    /* 入力ボックス：さらに小さく（スマホ前提） */
-    input[type="number"]{
-      width:3.8em;                                    /* ← ここを2.8em → 3.8em に変更 */
-      height:22px; line-height:22px;                  /* タップできる最小付近 */
-      text-align:center;
-      font-size:12px;                                  /* スマホでも小さく見せる */
-      font-weight:normal;
-      border:1px solid #ccc; border-radius:4px;
-      padding:0;                                       /* 余白で高さが増えないように */
-    }
-    /* スピン矢印を消す */
     input[type="number"]{ -moz-appearance:textfield; appearance:textfield; }
     input[type="number"]::-webkit-inner-spin-button,
     input[type="number"]::-webkit-outer-spin-button{ -webkit-appearance:none; margin:0; }
 
-    /* グラフ（枠・線はテーマ色） */
     .charts{ margin-top:10px; }
     .chart-card{
       padding:8px; border:2px solid var(--theme); border-radius:8px; background:#fff;
-      height:36vh; min-height:180px;  /* さらにコンパクト */
+      height:36vh; min-height:180px;
     }
     #chartScatter{ width:100%; height:100%; display:block; }
-
-    /* PC時（参考） */
-    @media (min-width: 641px){
-      :root{ --font: 12px; } /* PCも小さめでOKとのことなので合わせる */
-      h1{ font-size:18px; }
-      .theme-btn, button{ font-size:12px; }
-      th, td{ font-size:12px; }
-    }
   </style>
 </head>
 
-<!-- Google tag (gtag.js) — headの外（</head>直後） -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HXM85ZV043"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -168,149 +160,135 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-
   <script>
-    /* テーマ（色・薄色・RB/BBの有利G） */
     const THEMES = {
       gold:     { color:"#F7C948", light:"#FFF8DC", yuuri:{ RB:29, BB:69 } },
       black:    { color:"#111111", light:"#E0E0E0", yuuri:{ RB:24, BB:59 } },
       gorgeous: { color:"#E91E63", light:"#FFE4EC", yuuri:{ RB:24, BB:59 } }
     };
 
-    const KINDS        = ["RB","BB"];
+    const KINDS = ["RB","BB"];
     const FIXED_MEDALS = { RB:90, BB:210 };
-    let   FIXED_YUURI  = { ...THEMES.gold.yuuri };
+    let FIXED_YUURI = { ...THEMES.gold.yuuri };
 
     const DEFAULT_ROWS = Array.from({length:10},(_,i)=>({label:`${i+1}個目`,kind:"RB",games:""}));
-
     const tbody = document.getElementById("tbody");
-    const toInt = v => { const n = Number(v); return Number.isFinite(n) ? Math.trunc(n) : 0; };
+    const toInt = v => { const n=Number(v); return Number.isFinite(n)?Math.trunc(n):0; };
     const floorInt = n => Math.floor(Number(n)||0);
 
     function buildRow(i,d){
-      const tr = document.createElement("tr");
-      tr.dataset.index = i;
+      const tr=document.createElement("tr");
+      tr.dataset.index=i;
 
-      const td1 = document.createElement("td");
-      td1.textContent = d.label;
+      const td1=document.createElement("td");
+      td1.textContent=d.label;
 
-      const td2 = document.createElement("td");
-      const wrap = document.createElement("div");
-      wrap.className = "kind-btns";
+      const td2=document.createElement("td");
+      const wrap=document.createElement("div");
+      wrap.className="kind-btns";
       KINDS.forEach(k=>{
-        const b = document.createElement("button");
-        b.textContent = k;
-        if(k===d.kind) b.classList.add(k==="RB" ? "rb-selected" : "bb-selected");
-        b.onclick = ()=>{
+        const b=document.createElement("button");
+        b.textContent=k;
+        if(k===d.kind) b.classList.add(k==="RB"?"rb-selected":"bb-selected");
+        b.onclick=()=>{
           wrap.querySelectorAll("button").forEach(x=>x.classList.remove("rb-selected","bb-selected"));
-          b.classList.add(k==="RB" ? "rb-selected" : "bb-selected");
+          b.classList.add(k==="RB"?"rb-selected":"bb-selected");
           recalc();
         };
         wrap.appendChild(b);
       });
       td2.appendChild(wrap);
 
-      const td3 = document.createElement("td");
-      const inp = document.createElement("input");
-      inp.type = "number";
-      inp.value = d.games;
-      inp.addEventListener("change", recalc);
+      const td3=document.createElement("td");
+      const inp=document.createElement("input");
+      inp.type="number";
+      inp.value=d.games;
+      inp.addEventListener("change", recalc); // ← 入力確定時のみ再計算
       td3.appendChild(inp);
 
-      const td4 = document.createElement("td");
-      const y = document.createElement("span");
-      y.className = "value-text";
-      y.textContent = "0";
+      const td4=document.createElement("td");
+      const y=document.createElement("span");
+      y.className="value-text"; y.textContent="0";
       td4.appendChild(y);
 
-      const td5 = document.createElement("td");
-      const m = document.createElement("span");
-      m.className = "value-text";
-      m.textContent = "0";
+      const td5=document.createElement("td");
+      const m=document.createElement("span");
+      m.className="value-text"; m.textContent="0";
       td5.appendChild(m);
 
-      const td6 = document.createElement("td");
-      const del = document.createElement("button");
-      del.textContent = "削除";
-      del.onclick = ()=>{ tr.remove(); renumber(); recalc(); };
+      const td6=document.createElement("td");
+      const del=document.createElement("button");
+      del.textContent="削除";
+      del.onclick=()=>{ tr.remove(); renumber(); recalc(); };
       td6.appendChild(del);
 
       tr.append(td1,td2,td3,td4,td5,td6);
-      tr._refs = { inp, y, m, wrap, td1 };
+      tr._refs={ inp,y,m,wrap,td1 };
       tbody.appendChild(tr);
     }
 
     function renumber(){
-      [...tbody.querySelectorAll("tr")].forEach((tr,i)=> tr._refs.td1.textContent = `${i+1}個目`);
+      [...tbody.querySelectorAll("tr")].forEach((tr,i)=>tr._refs.td1.textContent=`${i+1}個目`);
     }
 
     let chart;
     function initChart(){
-      const ctx = document.getElementById("chartScatter").getContext("2d");
+      const ctx=document.getElementById("chartScatter").getContext("2d");
       if(chart) chart.destroy();
-      chart = new Chart(ctx,{
+      chart=new Chart(ctx,{
         type:"line",
-        data:{ datasets:[{
-          data:[], showLine:true, tension:0.2, pointRadius:0,
-          borderColor: getComputedStyle(document.documentElement).getPropertyValue("--theme").trim()
+        data:{datasets:[{
+          data:[],showLine:true,tension:0.2,pointRadius:0,
+          borderColor:getComputedStyle(document.documentElement).getPropertyValue("--theme").trim()
         }]},
         options:{
-          responsive:true, maintainAspectRatio:false,
+          responsive:true,maintainAspectRatio:false,
           scales:{
-            x:{ type:"linear", min:0, max:6000, title:{display:true, text:"総有利G数"} },
-            y:{              min:-6000, max:3000, title:{display:true, text:"総差枚数"} }
+            x:{type:"linear",min:0,max:6000,title:{display:true,text:"総有利G数"}},
+            y:{min:-6000,max:3000,title:{display:true,text:"総差枚数"}}
           },
-          plugins:{ legend:{ display:false } }
+          plugins:{legend:{display:false}}
         }
       });
     }
 
     function recalc(){
-      let xsum=0, ysum=0;
+      let xsum=0,ysum=0;
       const pts=[{x:0,y:0}];
-
       [...tbody.querySelectorAll("tr")].forEach(tr=>{
-        const { inp, y, m, wrap } = tr._refs;
-        const sel  = [...wrap.querySelectorAll("button")].find(b=>b.classList.contains("rb-selected")||b.classList.contains("bb-selected"));
-        const kind = sel ? sel.textContent : "RB";
-        const g    = toInt(inp.value);
-
-        const medal = FIXED_MEDALS[kind];
-        const yuuri = FIXED_YUURI[kind];
-        const cost  = floorInt(g*(50/32));
-
-        const xb = xsum + g,   yb = ysum - cost;  pts.push({x:xb,y:yb});  // 前
-        const xa = xb + yuuri, ya = yb + medal;   pts.push({x:xa,y:ya});  // 後
-
-        y.textContent = xa;
-        m.textContent = ya;
-
-        xsum = xa; ysum = ya;
+        const { inp,y,m,wrap }=tr._refs;
+        const sel=[...wrap.querySelectorAll("button")].find(b=>b.classList.contains("rb-selected")||b.classList.contains("bb-selected"));
+        const kind=sel?sel.textContent:"RB";
+        const g=toInt(inp.value);
+        const medal=FIXED_MEDALS[kind];
+        const yuuri=FIXED_YUURI[kind];
+        const cost=floorInt(g*(50/32));
+        const xb=xsum+g, yb=ysum-cost; pts.push({x:xb,y:yb});
+        const xa=xb+yuuri, ya=yb+medal; pts.push({x:xa,y:ya});
+        y.textContent=xa; m.textContent=ya;
+        xsum=xa; ysum=ya;
       });
-
       if(!chart) initChart();
-      chart.data.datasets[0].data = pts;
-      chart.data.datasets[0].borderColor = getComputedStyle(document.documentElement).getPropertyValue("--theme").trim();
+      chart.data.datasets[0].data=pts;
+      chart.data.datasets[0].borderColor=getComputedStyle(document.documentElement).getPropertyValue("--theme").trim();
       chart.update();
     }
 
     function addRow(){ buildRow(tbody.children.length,{label:`${tbody.children.length+1}個目`,kind:"RB",games:""}); recalc(); }
     function reset(){ tbody.innerHTML=""; DEFAULT_ROWS.forEach((r,i)=>buildRow(i,r)); recalc(); }
     function applyTheme(key){
-      const t = THEMES[key];
-      document.documentElement.style.setProperty("--theme", t.color);
-      document.documentElement.style.setProperty("--theme-light", t.light);
-      FIXED_YUURI = { ...t.yuuri };
-      document.querySelectorAll(".theme-btn").forEach(b=> b.classList.toggle("active", b.dataset.key===key));
+      const t=THEMES[key];
+      document.documentElement.style.setProperty("--theme",t.color);
+      document.documentElement.style.setProperty("--theme-light",t.light);
+      FIXED_YUURI={...t.yuuri};
+      document.querySelectorAll(".theme-btn").forEach(b=>b.classList.toggle("active",b.dataset.key===key));
       recalc();
     }
 
-    reset();
-    initChart();
-    applyTheme("gold");
-    document.querySelectorAll(".theme-btn").forEach(b=> b.onclick = () => applyTheme(b.dataset.key));
-    document.getElementById("add-row-btn").onclick = addRow;
-    document.getElementById("reset-btn").onclick   = reset;
+    reset(); initChart(); applyTheme("gold");
+    document.querySelectorAll(".theme-btn").forEach(b=>b.onclick=()=>applyTheme(b.dataset.key));
+    document.getElementById("add-row-btn").onclick=addRow;
+    document.getElementById("reset-btn").onclick=reset;
   </script>
 </body>
 </html>
